syntax = "proto3";
option java_outer_classname = "data";

message data {
  string srcId = 1;
  string destId = 2;
  string srcPublicKey = 3;
  string destPublicKey = 4;
  string data = 5;
}

